@@ -1,3 +1,9 @@
+2001-07-23  Stephen L Moshier <moshier@mediaone.net>
+
+	* sysdeps/ieee754/ldbl-128/s_log1pl.c (__log1pl): Return proper
+	sign for 0 input and set divide by zero exception for -1 input.
+	Return argument if NaN or infinity.
+
 2001-07-23  Andreas Jaeger  <aj@suse.de>
 
 	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Add some deltas.
